# 3DViewer2.0

./: Doxyfile  Makefile  controller.cc  controller.h  main.cc
model/: Facade.cc  Facade.h  FacadeOperationResult.cc  FacadeOperationResult.h  Facet.cc  Facet.h  NormalizationParametrs.cc  NormalizationParametrs.h  Parser.cc  Parser.h  Scene.cc  Scene.h  Strategy.cc  Strategy.h  Vertex.cc  Vertex.h
view/: CMakeLists.txt  CMakeLists.txt.user.424f510  CMakeLists.txt.user.a4836cf  Settings.cc  Settings.h  glwidget.cpp  glwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
